--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
     "@reduxjs/toolkit": "^2.9.2",
+    "@shopify/flash-list": "^2.1.0",
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
@@ -47,6 +51,7 @@
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-native": "^5.0.0",
     "prettier": "^3.6.2",
+    "reactotron-react-native": "^5.1.18",
     "typescript": "~5.9.2"
   },
   "private": true
